# metro-tasks

./: Dockerfile  README.md  docker-compose.yml  init.sql  pyproject.toml  requirements.txt
src/ml_model_training_pipeline/: config.py  database_connection.py  pipeline.py  pipeline_operators.py  utils.py
src/ml_model_training_pipeline/metadata_database_models/: pipeline.py
src/ml_model_training_pipeline/resources/: config.json
tests/: __init__.py  conftest.py  test_pipeline_operators.py
tests/fixtures/: pipeline_operators.py
